# Test_tasks

./: .gitignore  README.md
Cpp - 3D Curves_derivatives/: CMakeLists.txt  README.md  main.cpp  output.txt
Cpp - 3D Curves_derivatives/myCADLib/: CMakeLists.txt  mycadlib.cpp
Cpp - 3D Curves_derivatives/myCADLib/include/: mycadlib.h
Cpp - Flight_track/: CMakeLists.txt  README.md  progtest.cpp  schedule.txt
Cpp - Identifier/Identifier/: CMakeLists.txt
Cpp - Parser_Token tree_DFS/: CMakeLists.txt  README.md  main.cpp  output.txt  parser.cpp  parser.h
Data Sience - TimeSeries Forecast/: TimeSeries_forecast.html  TimeSeries_forecast.ipynb  Тестовое задание.xlsx
Python-Django -Calendar/: README.docx  db.sqlite3  manage.py
Python-Django -Calendar/calend_app/: admin.py  apps.py  models.py  urls.py  views.py
Python-Django -Calendar/calend_app/migrations/: 0001_initial.py  0002_remove_calendar_type.py  0003_alter_calendar_type_day.py  0004_alter_calendar_type_day.py  0005_alter_calendar_date_alter_calendar_type_day_and_more.py
Python-Django -Calendar/djangCalendar/: asgi.py  settings.py  urls.py  wsgi.py
Python-Django -Calendar/templates/: add_note.html  base.html  home.html  note_detail.html  notes_list.html
Python-Django -Calendar/templates/calend_app/: day_event_confirm_delete.html  day_event_form.html  day_event_form_add.html
SQL - Dashboard/: README.md  Task_vitrina.sql  Vitrina.sql
Задание 1/: README.md
Задание 1/Identifier/: Identifier.cpp  Identifier.h  main.cpp
